# fio

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
app/core/: config.py
app/db/: session.py
app/models/: task.py
app/schemas/: task.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5f9975767b1f_create_tasks_table.py
backend/app/: main.py
backend/app/api/: crud.py  endpoints.py
backend/app/db/: init_db.py  session.py
backend/app/models/: task.py
backend/app/schemas/: task.py
backend/app/scripts/: db_setup01_postgres.sql
frontend/: dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: README.md  db_setup02_fioapi_admin.sql
